Fix bugs with footer overflow

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -27,10 +27,7 @@
 .page-footer__inner {
   min-width: 215px;
   margin-top: -7px;
-
-  @include vp-1919 {
-    margin-right: auto;
-  }
+  margin-right: auto;
 
   @include vp-1023 {
     width: 100%;
@@ -112,7 +109,7 @@
   flex-wrap: wrap;
   row-gap: 30px;
   width: 845px;
-  min-height: 170px;
+  height: auto;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -132,24 +129,19 @@
 
 .page-footer__menu-item {
   &--topics {
-    width: 415px;
-
-    @include vp-1919 {
-      width: auto;
-    }
+    width: auto;
   }
 
   &--contacts {
     position: relative;
     right: 35px;
-
-    @include vp-1919 {
-      width: 310px;
-      right: 0;
-    }
+    display: flex;
+    flex-direction: column;
+    width: 310px;
   }
 
   @include vp-1023 {
+    right: 0;
     width: auto;
   }
 
@@ -200,20 +192,20 @@
 
 .page-footer__menu-sublist {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   column-gap: 30px;
-  height: 150px;
   margin: 0;
   padding: 0;
   list-style: none;
+  margin-right: auto;
 
-  @include vp-1919 {
-    &--topics {
-      display: grid;
-      grid-template-columns: 220px auto;
-      grid-template-rows: repeat(4, min-content);
-    }
+  &--topics {
+    display: grid;
+    grid-template-columns: auto min-content;
+    grid-template-rows: repeat(4, min-content);
+    height: auto;
+    column-gap: 48px;
   }
 
   @include vp-1023 {
@@ -226,11 +218,7 @@
 }
 
 .page-footer__menu-item:nth-child(2n) .page-footer__menu-subitem {
-  width: 310px;
-
-  @include vp-1919 {
-    width: auto;
-  }
+  width: auto;
 
   @include vp-1023 {
     width: 320px;
@@ -249,35 +237,32 @@
 
 .page-footer__menu-subitem {
   margin-bottom: 7px;
-  width: 220px;
+  width: auto;
 
   &:last-child {
     margin-bottom: 0;
   }
 
-  @include vp-1919 {
-    width: auto;
-
-    &--assembling {
-      order: 5;
-    }
-
-    &--contacts {
-      order: 4;
-    }
-
-    &--production {
-      order: 3;
-    }
-
-    &--products {
-      order: 2;
-    }
-
-    &--delivery {
-      order: 2;
-    }
+  &--assembling {
+    order: 5;
   }
+
+  &--contacts {
+    order: 4;
+  }
+
+  &--production {
+    order: 3;
+  }
+
+  &--products {
+    order: 2;
+  }
+
+  &--delivery {
+    order: 2;
+  }
+
 
   @include vp-1023 {
     order: 0;
